k8s/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-algoan
  namespace: algoan
spec:
  selector:
    app: algoan
  ports:
  - name: algoan
    protocol: TCP
    port: 80
    targetPort: 9376

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: algoan
  name: algoan
  namespace: algoan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: algoan
  template:
    metadata:
      labels:
        app: algoan
    spec:
      containers:
      - image: eu.gcr.io/projectAlgoanID/algoan_image:v0.0.O
        name: algoan
        resources:
          limits:
            cpu: "2"
          requests:
            cpu: "500m"
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-netpol
  namespace: algoan
spec:
  podSelector:
    matchLabels:
      app: algoan
  policyTypes:
    - Egress
  egress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: algoan
          podSelector:
            matchLabels:
              app: mysql
      ports:
        - protocol: TCP
          port: 3306
