k8s/db.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: algoan
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: algoan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        resources:
          limits:
            cpu: "2"
          requests:
            cpu: "500m"
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim        
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-netpol
  namespace: algoan
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: algoan
          podSelector:
            matchLabels:
              app: algoan
      ports:
        - protocol: TCP
          port: 3306
